# lua_mobdebug_server

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
.lldb/: Formatter.lldb  Formatter.py
mobdebug_wrapper/: CMakeLists.txt
mobdebug_wrapper/bindings/: CMakeLists.txt  debugger.i
mobdebug_wrapper/bindings/javascript/: CMakeLists.txt  binding.gyp  debugger_wrap.cxx  debugger_wrap.h  module.cxx
mobdebug_wrapper/bindings/javascript/cmake/modules/: FindNodejs.cmake
mobdebug_wrapper/bindings/lua/: CMakeLists.txt
mobdebug_wrapper/bindings/python/: CMakeLists.txt
mobdebug_wrapper/headers/: collection.h  debugger.h  stack.h  test.h
mobdebug_wrapper/scripts/: mobdebug_wrapper.lua  mobdebug_wrapper_client.lua
mobdebug_wrapper/sources/: collection.c  debugger.c  main.c  stack.c
server_terminal/: CMakeLists.txt
server_terminal/sources/: main.c
