cmake_minimum_required( VERSION 3.21 )

project( python )

FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

# INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/..)

SET(CMAKE_SWIG_FLAGS "")

# SET_SOURCE_FILES_PROPERTIES(debugger.i PROPERTIES SWIG_FLAGS "-includeall")
SWIG_ADD_LIBRARY(debugger TYPE MODULE LANGUAGE python SOURCES ../debugger.i)
SWIG_LINK_LIBRARIES(debugger ${PYTHON_LIBRARIES} mobdebug_wrapper)